--- a/E46M3CSLConvert_VANOSTableEditor.html
+++ b/E46M3CSLConvert_VANOSTableEditor.html
@@ -10,7 +10,6 @@
   <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-annotation@1.1.0"></script>
 
   <style>
-    /* ベーススタイルのリセット */
     * {
       margin: 0;
       padding: 0;
@@ -23,7 +22,7 @@
       font-size: 14px;
       line-height: 1.5;
       margin: 1rem;
-      background-color: #f7f7f7;
+      background-color: #ffffff;
     }
 
     /* メインコンテナ */
@@ -107,7 +106,6 @@
       border-radius: 4px;
     }
 
-    /* コントロールパッドのサイズを "気持ち小さく" */
     #controlArea {
       border: 1px solid #ddd;
       cursor: crosshair;
@@ -117,7 +115,7 @@
       position: relative;
       width: 100%;
       max-width: 800px;
-      height: 280px; /* 240pxから小さめに */
+      height: 280px; 
       background-color: #fafafa;
       border-radius: 4px;
       margin-top: 0.5rem;
