--- a/E46M3CSL_VETableEditor.html
+++ b/E46M3CSL_VETableEditor.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="en">
 <head>
   <meta charset="utf-8"/>
   <title>VE Table 3D & 2D with Sticky Labels + CSV Download</title>
@@ -10,8 +10,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover"/>
   <style>
     /* =========================================
-       シンプル＆モダンなデザインにアップデート
-       白ベースのタブ風デザイン + sticky rows & columns
+       Updated to a simple & modern design
+       White-based tab style + sticky rows & columns
        ========================================= */
 
     * {
@@ -24,24 +24,24 @@
       width: 100%;
       height: 100%;
       font-family: 'Inter', sans-serif;
-      background: #f9fafb; /* ほんのり淡いグレー */
+      background: #f9fafb; /* Light gray */
       color: #1f1f1f;
     }
 
-    /* メインコンテナ
-       -- デスクトップ時は左右分割
-       -- スマホなど小さい画面時は上下分割（レスポンシブ）
+    /* Main container
+       -- Side-by-side split on desktop
+       -- Top-bottom split on smaller screens (responsive)
     */
     #container {
       display: flex;
       flex-direction: row;
       width: 100%;
-      height: 100vh; /* 画面全体を使用 */
+      height: 100vh; /* Use the entire screen */
       position: relative;
-      overflow: hidden; /* 自身のスクロールを隠す */
+      overflow: hidden; /* Hide its own scrollbar */
     }
 
-    /* 左ペイン(グラフエリア) */
+    /* Left pane (graph area) */
     #graph-container {
       display: flex;
       flex-direction: column;
@@ -52,7 +52,7 @@
       height: 100%;
     }
 
-    /* タブボタンエリア（白ベースのタブ風） */
+    /* Tab button area (white-based tab style) */
     .tab-buttons {
       display: flex;
       align-items: center;
@@ -65,7 +65,7 @@
     .tab-buttons button {
       background: #ffffff;
       border: 1px solid #e5e7eb;
-      border-radius: 6px 6px 0 0; /* タブ上辺を丸める */
+      border-radius: 6px 6px 0 0; /* Round the top corners of the tab */
       padding: 0.6rem 1rem;
       margin-right: 0.5rem;
       cursor: pointer;
@@ -83,9 +83,9 @@
       box-shadow: 0 0 0 2px rgba(59,130,246,0.3);
     }
 
-    /* グラフエリアと下のsplitter */
+    /* Graph area and the splitter below */
     #chart-area {
-      flex: 0 0 400px; /* 初期の高さ(px) */
+      flex: 0 0 400px; /* Initial height (px) */
       display: flex;
       flex-direction: column;
       overflow: hidden;
@@ -98,7 +98,7 @@
       flex-shrink: 0;
     }
 
-    /* タブコンテンツ */
+    /* Tab content */
     .tab-content {
       flex: 1;
       display: none;
@@ -112,7 +112,7 @@
       display: block;
     }
 
-    /* グラフ領域 */
+    /* Graph area */
     #chart-3d,
     #chart-2d-rpm,
     #chart-2d-load {
@@ -121,7 +121,7 @@
       min-height: 200px;
     }
 
-    /* splitter (左右) (ドラッグで左右を調整) */
+    /* Splitter (left-right) (Drag to adjust width) */
     #splitter {
       flex: 0 0 auto;
       width: 5px;
@@ -129,7 +129,7 @@
       cursor: col-resize;
     }
 
-    /* 右ペイン */
+    /* Right pane */
     #table-container {
       display: flex;
       flex-direction: column;
@@ -137,7 +137,7 @@
       padding: 1rem;
       background: #ffffff;
       box-shadow: inset 5px 0 10px rgba(0,0,0,0.02);
-      overflow: hidden; /* 全体スクロールをさせない */
+      overflow: hidden; /* Prevent overall scrolling */
     }
 
     #table-container h2 {
@@ -146,23 +146,23 @@
       color: #111827;
     }
 
-    /* テーブルを包むラッパ。
-       - sticky列 & sticky行を効かせるためには
-         overflowを発生させる容器が必要。
+    /* Wrapper for the table.
+       - A container that causes overflow is needed
+         for sticky columns & rows to work.
     */
     #table-wrapper {
       flex: 1;
       position: relative;
-      overflow: auto; /* 縦横スクロール */
-      max-height: calc(100vh - 180px); /* 画面下に余裕を残す設定例 */
+      overflow: auto; /* Vertical and horizontal scroll */
+      max-height: calc(100vh - 180px); /* Example setting to leave space at the bottom of the screen */
       border: 1px solid #ddd;
       border-radius: 4px;
       background: #fff;
     }
 
-    /* テーブルスタイル */
+    /* Table style */
     table {
-      min-width: 900px; /* 横スクロールを誘発するため十分に広く */
+      min-width: 900px; /* Wide enough to trigger horizontal scroll */
       border-collapse: collapse;
       background: #fff;
       font-size: 0.9rem;
@@ -188,14 +188,14 @@
       vertical-align: middle;
     }
 
-    /* 先頭行(RPM) */
+    /* Top row (RPM) */
     thead th {
       position: sticky;
       top: 0;
       z-index: 10;
     }
 
-    /* 左列(Load) */
+    /* Left column (Load) */
     tbody th {
       position: sticky;
       left: 0;
@@ -203,16 +203,16 @@
       background: #f9fafb;
     }
 
-    /* 左上隅のセル(ヘッダ最初) */
+    /* Top-left corner cell (first header) */
     thead th:first-child {
       position: sticky;
       top: 0;
       left: 0;
-      z-index: 11; /* ヘッダの中で一番上 */
+      z-index: 11; /* Highest z-index among headers */
       background: #f9fafb;
     }
 
-    /* テーブル内の入力フォーム */
+    /* Input forms within the table */
     td input {
       width: 3em;
       text-align: right;
@@ -231,10 +231,10 @@
     }
 
     .active-cell {
-      background-color: #fde68a !important; /* 薄い黄色系 */
+      background-color: #fde68a !important; /* Light yellow */
     }
 
-    /* コピペエリア */
+    /* Copy-paste area */
     #copy-paste-area {
       margin-top: 1rem;
       border: 1px solid #e5e7eb;
@@ -284,7 +284,7 @@
       outline: 2px solid rgba(59,130,246,0.3);
     }
 
-    /* 小画面(768px以下)で上下分割 */
+    /* Top-bottom split on small screens (768px or less) */
     @media (max-width: 768px) {
       #container {
         flex-direction: column;
@@ -293,7 +293,7 @@
       #graph-container {
         flex: none;
         width: 100%;
-        height: 300px; /* ここは適宜調整 */
+        height: 300px; /* Adjust this as needed */
         overflow: hidden;
       }
 
@@ -320,10 +320,10 @@
 
 <body>
 <div id="container">
-  <!-- ▼ 左側（グラフ表示+タブ） -->
+  <!-- ▼ Left side (Graph display + Tabs) -->
   <div id="graph-container">
     <div class="tab-buttons">
-      <button onclick="switchTab('3d')">3D表示</button>
+      <button onclick="switchTab('3d')">3D View</button>
       <button onclick="switchTab('2d-rpm')">2D (x=RPM)</button>
       <button onclick="switchTab('2d-load')">2D (x=Load)</button>
     </div>
@@ -342,24 +342,24 @@
     <div id="chart-lower-space" style="flex:1; background:#fff; overflow:auto;"></div>
   </div>
 
-  <!-- ▼ 分割バー(左右) -->
+  <!-- ▼ Splitter (Left-Right) -->
   <div id="splitter"></div>
 
-  <!-- ▼ 右側（テーブル表示+コピペ） -->
+  <!-- ▼ Right side (Table display + Copy-paste) -->
   <div id="table-container">
-    <h2>E46M3 VEテーブル</h2>
-    <!-- テーブルをスクロールさせるラッパ -->
+    <h2>E46M3 VE Table</h2>
+    <!-- Wrapper to make the table scrollable -->
     <div id="table-wrapper">
       <table id="ve-table"></table>
     </div>
 
     <div id="copy-paste-area">
-      <h3>テキストエリア（TSV形式）</h3>
+      <h3>Text Area (TSV Format)</h3>
       <textarea id="table-tsv"></textarea><br>
-      <button id="btn-export">テーブル → テキストエリア</button>
-      <button id="btn-import">テキストエリア → テーブル</button>
-      <button id="btn-download-csv">CSVとしてダウンロード</button>
-      <button id="btn-load-csv">CSVを読み込む</button>
+      <button id="btn-export">Table → Text Area</button>
+      <button id="btn-import">Text Area → Table</button>
+      <button id="btn-download-csv">Download as CSV</button>
+      <button id="btn-load-csv">Load CSV</button>
       <input type="file" id="file-input" accept=".csv" style="display:none" />
     </div>
   </div>
@@ -367,7 +367,7 @@
 
 <script>
 // ---------------------------------------------------------------------
-// デモ用のRPM/Load配列 & VEテーブル（サンプル）
+// Demo RPM/Load arrays & VE table (Sample)
 // ---------------------------------------------------------------------
 const rpmValues = [
   600, 870, 1100, 1300, 1400, 1600, 1800, 2100, 2200, 2400,
@@ -407,12 +407,12 @@ let veTable = [
   [120.2,116.7,84.5,67.0,78.8,105.3,61.0,58.3,66.3,69.8,72.2,73.1,68.4,125.5,111.2,110.1,108.7,106.0,107.1,101.7]
 ];
 
-// アクティブセル
+// Active cell
 let activeCell = { row: null, col: null };
 
-// リアクト時にPlotlyへ渡す"全設定"を保持するオブジェクト
-// 3D, 2D-rpm, 2D-loadの各レイアウトをそれぞれ保持
-// これらをPlotly.react()時に適用し、ユーザーがグラフUIで変更した設定を維持できるようにする
+// Object to hold the "full configuration" passed to Plotly on react
+// Holds the layout for 3D, 2D-rpm, and 2D-load respectively
+// These are applied during Plotly.react() to maintain settings changed by the user via the graph UI
 let layout3DState = null;
 let layout2DRPMState = null;
 let layout2DLoadState = null;
@@ -430,20 +430,20 @@ function createTable() {
   const tableEl = document.getElementById('ve-table');
   let html = '';
 
-  // ヘッダ
+  // Header
   html += '<thead>\n  <tr><th>Load / RPM</th>';
   rpmValues.forEach(rpm => {
     html += `<th>${rpm}</th>`;
   });
   html += '</tr>\n</thead>';
 
-  // 本体
+  // Body
   html += '<tbody>';
   veTable.forEach((rowArr, rIndex) => {
     html += '<tr>';
-    // 左列=Load
+    // Left column=Load
     html += `<th>${loadValues[rIndex]}</th>`;
-    // データセル
+    // Data cell
     rowArr.forEach((val, cIndex) => {
       const displayVal = isNaN(val) ? '' : val.toFixed(1);
       const isActive = (activeCell.row === rIndex && activeCell.col === cIndex);
@@ -456,7 +456,7 @@ function createTable() {
 
   tableEl.innerHTML = html;
 
-  // イベント設定
+  // Set up events
   tableEl.querySelectorAll('input').forEach(inp => {
     inp.addEventListener('focus', onCellFocus);
     inp.addEventListener('input', onCellInput);
@@ -468,7 +468,7 @@ function onCellFocus(e) {
   const c = +e.target.getAttribute('data-col');
   activeCell = { row: r, col: c };
 
-  // テーブルのactive-cellクラスを更新
+  // Update the active-cell class in the table
   document.querySelectorAll('#ve-table td.active-cell').forEach(td => {
     td.classList.remove('active-cell');
   });
@@ -560,7 +560,7 @@ function draw3DChart() {
 
   Plotly.react('chart-3d', data, finalLayout, config).then(gd => {
     gd.on('plotly_relayout', evt => {
-      // gd.layoutには現在の設定がフルに入るため、これを丸ごと保存
+      // gd.layout contains the full current settings, so save it entirely
       layout3DState = JSON.parse(JSON.stringify(gd.layout));
     });
   });
@@ -606,7 +606,7 @@ function draw2DRPM() {
 
   Plotly.react('chart-2d-rpm', traces, finalLayout, config).then(gd => {
     gd.on('plotly_relayout', evt => {
-      // 上書き保存
+      // Overwrite save
       layout2DRPMState = JSON.parse(JSON.stringify(gd.layout));
     });
   });
@@ -672,7 +672,7 @@ window.addEventListener('resize', () => {
   Plotly.Plots.resize(document.getElementById('chart-2d-load'));
 });
 
-// スプリッター(左右)
+// Splitter (Left-Right)
 const container = document.getElementById('container');
 const leftPane = document.getElementById('graph-container');
 const rightPane = document.getElementById('table-container');
@@ -702,7 +702,7 @@ document.addEventListener('mouseup', () => {
   isDraggingHorizontal = false;
 });
 
-// スプリッター(上下)
+// Splitter (Top-Bottom)
 const graphSplitter = document.getElementById('graph-splitter');
 let isDraggingVertical = false;
 
@@ -731,7 +731,7 @@ document.addEventListener('mouseup', () => {
 });
 
 //-----------------------------------------------
-// コピペ機能（TSV）
+// Copy-Paste Functionality (TSV)
 //-----------------------------------------------
 function exportToTextArea() {
   const lines = veTable.map(row => row.join('\t'));
@@ -754,7 +754,7 @@ function importFromTextArea() {
 }
 
 //-----------------------------------------------
-// CSVダウンロード
+// CSV Download
 //-----------------------------------------------
 function downloadCSV() {
   let csvContent = 'Load/RPM,' + rpmValues.join(',') + '\n';
@@ -801,10 +801,10 @@ function handleFileSelect(e) {
 function parseCSVAndUpdateTable(csvData) {
   const lines = csvData.split(/[\r\n]+/).filter(l => l.trim());
   if (lines.length < 2) {
-    alert('CSVにデータ行がありません');
+    alert('CSV has no data rows');
     return;
   }
-  // lines[0] = ヘッダ行
+  // lines[0] = Header row
   const newTable = [];
   for (let i = 1; i < lines.length; i++) {
     const cols = lines[i].split(',');
@@ -823,7 +823,7 @@ function parseCSVAndUpdateTable(csvData) {
 }
 
 //-----------------------------------------------
-// テスト＆初期化
+// Test & Initialization
 //-----------------------------------------------
 function runTests() {
   console.log("[TEST] Code loaded without syntax errors.");
